# mara_team12

./: README.md  carbon_footprint.py  inputs.py  main.py  mara_api.py  mara_complete.py  requirements.txt  simple.py
archive/: budget_allocation.py  main.py
mara_hackathon/: DASHBOARD_README.md  README.md  WORKFLOW_SUMMARY.md  dashboard_app.py  dashboard_requirements.txt  demo_data.py  hardware_update.json  mining_report.json  pyproject.toml  run_every_5_min.py  start_dashboard.py  test_full_workflow.py  test_new_agents.py
mara_hackathon/src/mara_hackathon/: crew.py  crew_full.py  crew_simple.py  main.py
mara_hackathon/src/mara_hackathon/config/: agents.yaml  tasks.yaml  tasks_full.yaml  tasks_simple.yaml
mara_hackathon/src/mara_hackathon/tools/: __init__.py  energy_tools.py  hardware_carbon_tools.py
mara_hackathon/templates/: dashboard.html
