[project]
name = "mara_hackathon"
version = "0.1.0"
description = "Energy-Bitcoin Mining Optimization Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "gridstatusio>=0.1.0",
    "gridstatus>=0.1.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0"
]

[project.scripts]
mara_hackathon = "mara_hackathon.main:run"
run_crew = "mara_hackathon.main:run"
train = "mara_hackathon.main:train"
replay = "mara_hackathon.main:replay"
test = "mara_hackathon.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
